# VL_SoftwareprojektRobotik

./: .annotations.cson  .gitignore  00_Einfuehrung.md  00_Einführung.md  01_OOPinC++.md  02_SpeicherUndPointer.md  03_Templates.md  04_OOP_Container.md  04_STL.md  05_DesginPattern.md  05_Entwurfsmuster.md  05_Observer_Pattern_EN.md  06_EinfuehrungROS.md  07_ROS_Pakete.md  08_ROS2_Kommunikation.md  08_ROS_Kommunikation.md  08_ROS_Kommunkation.md  09_Sensoren.md  10_Koordinatentransformation.md  10_Sensordatenhandling.md  10_Sensordatenverarbeitung.md  11_Regelungstechnik.md  11_Sensordatenhandling.md  12_Datenfusion.md  12_Regelungstechnik.md  13_Datenfusion.md  14_Pfadplanung.md  Makro_Beispiel.md  README.md  config.md
00_Einfuehrung/: 00_Einfuehrung.md
00_Einfuehrung/code/src/face_detector/: package.xml  setup.py
00_Einfuehrung/code/src/face_detector/face_detector/: face_detector_publisher.py  face_detector_solution.py
01_EinfuehrungROS/: 01_EinfuehrungROS.md
01_Sensorik/: 01_Sensorik.md  04_Sensoren.md
02_Koordinatensysteme/: 02_Koordinatentransformation.md
02_ROS_Pakete/: 02_ROS_Pakete.md
03_ROS_Grundlagen_I/: 03_EinfuehrungROS.md
03_ROS_Kommunikation/: 03_ROS_Kommunikation.md
04_ROS_Pakete_Tools/: 02_ROS_Pakete.md  04_ROS_Pakete.md
04_ROS_Pakete_Tools/example/pkg_example/my_tutorial_package/: CMakeLists.txt  package.xml
04_ROS_Pakete_Tools/example/pkg_example/my_tutorial_package/src/: data_generator.cpp
05_Bildverarbeitung/: 05_Bildverarbeitung.md
05_Bildverarbeitung/FaceDetection/: .gitignore  OVERVIEW.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  build.sh  test_camera.sh
05_Bildverarbeitung/FaceDetection/face_detection_20251205_052151/: metadata.yaml
05_Bildverarbeitung/FaceDetection/face_detection_20251205_052725/: metadata.yaml
05_Bildverarbeitung/FaceDetection/face_detection_20251205_053059/: metadata.yaml
05_Bildverarbeitung/FaceDetection/src/face_detector/: package.xml  setup.cfg  setup.py
05_Bildverarbeitung/FaceDetection/src/face_detector/face_detector/: face_detector_node.py
05_Bildverarbeitung/FaceDetection/src/face_detector/launch/: face_detection.launch.py
05_KoordinatenTransformation/: 05_Koordinatentransformation.md
06_Kamera_Stereo/: 06_Kamera_Stereo.md
06_Kamera_Stereo/PointCloudProcessing/: README.md
06_Kamera_Stereo/PointCloudProcessing/src/cloud_processing/: package.xml  setup.cfg  setup.py
06_Kamera_Stereo/PointCloudProcessing/src/cloud_processing/cloud_processing/: ground_detection_node.py  range_filter_node.py
06_Kamera_Stereo/PointCloudProcessing/src/cloud_processing/launch/: cloud_pipeline.launch.py
06_Kamera_Stereo/PointCloudProcessing/src/cloud_processing/rviz/: cloud_pipeline.rviz
06_Kamera_Stereo/StereoVision/: README.md
06_Sensordatenhandling/: 06_Sensordatenhandling.md
07_Objekterkennung/: 07_Objekterkennung.md
07_Objekterkennung/yoloExample/: Pipfile  detect_objects.py
07_Regelungstechnik/: 07_Regelungstechnik.md
07_Regelungstechnik/code/: control.py  main.py
07_Regelungstechnik/images/: robot_kinematic.xml  robot_kinematic_model
08_Datenfusion/: 08_Datenfusion.md
08_Sensorfusion_I/: 08_Datenfusion.md
08_Sensorfusion_I/code/: bayes_filter_2d.py
09_Sensorfusion_II/: 09_Kalman_Filter.md  09_Sensorfusion_II.md
10_Kinematik_Regelung/: 10_Kinematik_Regelung.md
10_Kinematik_Regelung/code/: move_to_pose.py
11_Navigation/: 11_Navigation.md
archiv/03_ROS_Kommunikation/examples/ws_service/src/my_services/: package.xml
data/: LaserScanner.bag
examples/: examples
examples/00_Einfuehrung/: PointerArrays.cpp  autoExamples.cpp  reducedHello.cpp  variableSize.cpp
examples/00_Einfuehrung/CompilerLinker/: Makefile  logger.cpp  logger.hpp  main  main.cpp
examples/01_OOPinC++/: main.cpp
examples/02_SpeicherUndPointer/: StackExample.cpp  StackOverflow.cpp  memory.cpp
examples/03_Templates/: Templates.cpp
examples/04_STL/: iterations.cpp
examples/05_DesginPattern/: CleaningRobots.cpp  makePrintout.tex
examples/05_Entwurfsmuster/: Bedroom.cpp  Bedroom.hpp  CleaningRobot.hpp  Hall.cpp  Hall.hpp  Kitchen.cpp  Kitchen.hpp  RoomType.cpp  RoomType.hpp  main.cpp
examples/07_ROS2Pakete/src/my_msg_package/: CMakeLists.txt  package.xml
examples/07_ROS2Pakete/src/my_tutorial_package/: CMakeLists.txt  package.xml
examples/07_ROS2Pakete/src/my_tutorial_package/launch/: TimerAction.launch.py  launchNodes.launch.py
examples/07_ROS2Pakete/src/my_tutorial_package/src/: data_generator.cpp  heartBeat.cpp  non_composable_subscriber.cpp
examples/07_ROS_Pakete/src/my_py_subscriber/: package.xml  setup.cfg  setup.py
examples/07_ROS_Pakete/src/my_py_subscriber/my_py_subscriber/: py_subscriber.py
examples/07_ROS_Pakete/startHukuyo/: hokuyo_config.yml
examples/08_ROS2_Kommunikation/ws_service/src/my_services_tutorial/: CMakeLists.txt  package.xml
examples/08_ROS2_Kommunikation/ws_service/src/my_services_tutorial/src/: service.cpp
examples/09_Sensoren/ROS_US_Measurements/: ROS_US_Measurements.ino
examples/09_Sensoren/US_ArduinoExample/: US_ArduinoExample.ino
examples/10_Koordinatenstransformtion/urdf_example/: extended.urdf
examples/11_Regelungstechnik/: move_to_pose.py
examples/14_Pfadplanung/: astar.py
exercises/: .gitignore  README.md
exercises/exercise_01_gnss_bags/: QUICKSTART.md  README.md
exercises/exercise_02_person_detection/: README.md  analyze_results.py
exercises/exercise_03_line_following/: README.md
exercises/exercise_03_line_following/line_follower/: package.xml  setup.cfg  setup.py
exercises/exercise_03_line_following/line_follower/config/: params.yaml
exercises/exercise_03_line_following/line_follower/launch/: line_following.launch.py
exercises/exercise_03_line_following/line_follower/line_follower/: __init__.py  controller_node.py  line_detector_node.py  obstacle_detector_node.py
image/05_Entwurfsmuster/: ObserverPattern.drawio  ObserverPattern2.drawio  ObserverPattern3.drawio  ObserverPattern4.drawio
image/14_Pfadplanung/: Bug_Algorithms.odp
material/09_Sensors/: RGB-D Kameraprinzipien.odt
(+43 files in other folders)
